--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,7 +9,7 @@
     <nav>
         <h2>Découvrez nos produits :</h2>
         <ul>
-            <li><a href="garantie-protection-accident.html">🛡️ Garantie Protection Accident</a></li>
+            <li><a href="garanties.html">🛡️ Garantie Protection Accident</a></li>
             <li><a href="sante.html">🏥 Assurance Santé</a> <em>(bientôt disponible)</em></li>
             <li><a href="retraite.html">👴 Assurance Retraite</a> <em>(bientôt disponible)</em></li>
             <li><a href="epargne.html">💰 Assurance Épargne</a> <em>(bientôt disponible)</em></li>
