--- a/epargne.html
+++ b/epargne.html
@@ -514,7 +514,7 @@
             <div class="product-card">
                 <div class="product-icon">📈</div>
                 <h3 class="product-title">Vivepargne</h3>
-                <span class="product-badge">Bientôt disponible</span>
+                <span class="product-badge badge-available">Disponible</span>
                 <p class="product-description">
                     L'assurance vie multisupport pour faire fructifier votre épargne selon votre profil d'investisseur.
                 </p>
@@ -525,7 +525,7 @@
                     <li>0€ de frais d'entrée</li>
                     <li>Rachats partiels disponibles</li>
                 </ul>
-                <a href="#" class="product-link">Prochainement</a>
+                <a href="vivepargne.html" class="product-link available-link">Découvrir →</a>
             </div>
 
             <!-- Certificat Mutualiste -->
