--- a/epargne.html
+++ b/epargne.html
@@ -514,14 +514,14 @@
             <div class="product-card">
                 <div class="product-icon">📈</div>
                 <h3 class="product-title">Vivepargne</h3>
-                <span class="product-badge badge-available">Disponible</span>
+                <span class="badge-available">Disponible</span>
                 <p class="product-description">
                     L'assurance vie multisupport pour faire fructifier votre épargne selon votre profil d'investisseur.
                 </p>
                 <ul class="product-features">
                     <li>Plus de 500 supports d'investissement</li>
                     <li>Gestion pilotée disponible</li>
-                    <li>Versements libres dès 50€</li>
+                    <li>Versements libres dès 35€</li>
                     <li>0€ de frais d'entrée</li>
                     <li>Rachats partiels disponibles</li>
                 </ul>
