--- a/epargne.html
+++ b/epargne.html
@@ -514,7 +514,7 @@
             <div class="product-card">
                 <div class="product-icon">📈</div>
                 <h3 class="product-title">Vivepargne</h3>
-                <span class="badge-available">Disponible</span>
+                <span class="product-badge badge-available">Disponible</span>
                 <p class="product-description">
                     L'assurance vie multisupport pour faire fructifier votre épargne selon votre profil d'investisseur.
                 </p>
