--- a/vivepargne.html
+++ b/vivepargne.html
@@ -441,11 +441,17 @@
         }
 
         .tax-points {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    margin-top: 30px;
+    justify-items: center;
+}
+
+.tax-points .tax-point:last-child:nth-child(3n-2) {
+    grid-column: 1 / -1;
+}
+        
 
         .tax-point {
             text-align: center;
