--- a/vivepargne.html
+++ b/vivepargne.html
@@ -441,20 +441,17 @@
         }
 
         .tax-points {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
-    margin-top: 30px;
-    justify-items: center;
-}
-
-.tax-points .tax-point:last-child:nth-child(3n-2) {
-    grid-column: 1 / -1;
-}
-        
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            margin-top: 30px;
+        }
 
         .tax-point {
             text-align: center;
+            min-width: 250px;
+            flex: 0 1 300px;
         }
 
         .tax-number {
