--- a/vivepargne.html
+++ b/vivepargne.html
@@ -417,6 +417,9 @@
         .price-tag span {
             font-size: 0.5em;
             opacity: 0.8;
+            background: var(--gradient-savings);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .price-details {
@@ -765,7 +768,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 AG2R LA MONDIALE - Tous droits réservés</p>
+        <p>&copy; 2024 AG2R LA MONDIALE - Tous droits réservés</p>
         <p style="font-size: 0.9em; margin-top: 10px; opacity: 0.7;">
             Les performances passées ne préjugent pas des performances futures. Les unités de compte présentent un risque de perte en capital.
         </p>
@@ -791,5 +794,4 @@
         });
     </script>
 </body>
-</html>
 </html>
