--- a/vivepargne.html
+++ b/vivepargne.html
@@ -416,10 +416,8 @@
 
         .price-tag span {
             font-size: 0.5em;
-            opacity: 0.8;
-            background: var(--gradient-savings);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #48dbfb;
+            opacity: 1;
         }
 
         .price-details {
