--- a/epargne.html
+++ b/epargne.html
@@ -574,7 +574,7 @@
             <div class="product-card">
                 <div class="product-icon">💎</div>
                 <h3 class="product-title">Patrimoine Sélection</h3>
-                <span class="product-badge">Bientôt disponible</span>
+                <span class="product-badge badge-available">Disponible</span>
                 <p class="product-description">
                     La solution haut de gamme pour optimiser et diversifier votre patrimoine financier.
                 </p>
@@ -585,7 +585,7 @@
                     <li>Stratégies d'optimisation fiscale</li>
                     <li>Investissement minimum : 100 000€</li>
                 </ul>
-                <a href="#" class="product-link disabled">Prochainement</a>
+                <a href="patrimoine-selection-vie.html" class="product-link available-link">Découvrir →</a>>
             </div>
         </div>
     </section>
