--- a/epargne.html
+++ b/epargne.html
@@ -585,7 +585,7 @@
                     <li>Stratégies d'optimisation fiscale</li>
                     <li>Investissement minimum : 100 000€</li>
                 </ul>
-                <a href="patrimoine-selection-vie.html" class="product-link available-link">Découvrir →</a>>
+                <a href="patrimoine-selection-vie.html" class="product-link available-link">Découvrir →</a>
             </div>
         </div>
     </section>
