--- a/epargne.html
+++ b/epargne.html
@@ -556,7 +556,7 @@
             <div class="product-card">
                 <div class="product-icon">🏦</div>
                 <h3 class="product-title">Certificat Mutualiste</h3>
-                <span class="product-badge">Bientôt disponible</span>
+                <span class="product-badge badge-available">Disponible</span>
                 <p class="product-description">
                     Un placement solidaire et sécurisé qui finance des projets à forte utilité sociale.
                 </p>
@@ -567,7 +567,7 @@
                     <li>Fiscalité avantageuse</li>
                     <li>Souscription dès 100€</li>
                 </ul>
-                <a href="#" class="product-link disabled">Prochainement</a>
+                <a href="certificats-mutualistes.html" class="product-link available-link">Découvrir →</a>
             </div>
 
             <!-- Patrimoine Sélection -->
